--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
+  <link rel="stylesheet" href="./resources/css/style.css">
+  <title>Fotomatic</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <!-- Header -->
@@ -21,8 +24,8 @@
       </nav>
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-          <li><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
+          <li><a href="#" class="icon"><img src="./resources/images/ic-logo.svg"></a></li>
+          <li><a href="#" class="icon"><img src="./resources/images/ic-product-detail.svg"></a></li>
           <li><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
           <li><a href="#" class="button">Join us</a></li>
         </ul>
@@ -56,7 +59,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-1.png" />
+            <img src="./resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -67,7 +70,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="./resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -99,7 +102,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
